<resources>
    <string name="app_name">StudEXP</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_books">Books</string>
    <string name="menu_people_ranks">People/Ranks</string>
    <string name="menu_experiments">Experiments</string>
    <string name="menu_account">Account</string>

    <!--   my customized String Variables  -->
    <string name="displaying_course">Displaying Course</string>
    <string name="users">Users</string>
    <string name="groups">Groups</string>
    <string name="test_heading">test heading</string>

</resources>