<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_subject"
            android:title="@string/menu_subjects" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_person_pin"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_library"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_ranks"
            android:icon="@drawable/ic_ranks"
            android:title="@string/menu_people_ranks" />
        <item
            android:id="@+id/nav_experiments"
            android:icon="@drawable/ic_science"
            android:title="@string/menu_experiments" />
        <item
            android:id="@+id/nav_account"
            android:title="@string/menu_account"
            android:icon="@drawable/ic_person"/>
    </group>
</menu>