<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_subjects">

    <fragment
        android:id="@+id/nav_subjects"
        android:name="com.bless.studexp.ui.Subjects.SubjectsFragment"
        android:label="@string/menu_subjects"
        tools:layout="@layout/fragment_subjects" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.bless.studexp.ui.Chats.ChatsFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.bless.studexp.ui.Groups.GroupFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />
    <fragment
        android:id="@+id/nav_books"
        android:name="com.bless.studexp.ui.books.BooksFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_books" />
    <fragment
        android:id="@+id/nav_ranks"
        android:name="com.bless.studexp.ui.People_Ranks.Ranks"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_ranks" />
    <fragment
        android:id="@+id/nav_experiments"
        android:name="com.bless.studexp.ui.Experiments.ExperimentFragment"
        android:label="@string/menu_experiments"
        tools:layout="@layout/fragment_experiment" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.bless.studexp.ui.Experiments.ExperimentFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_experiment" />
</navigation>